fix did contract
