# internal/server/router/did.go
@@ -3,6 +3,7 @@ package router
 import (
 	"fmt"
 
+	"github.com/ethereum/go-ethereum/common/hexutil"
 	"github.com/gin-gonic/gin"
 )
 
@@ -23,15 +24,13 @@ func loadDIDmoudles(r *gin.RouterGroup, h *handle) {
 // @Accept json
 // @Produce json
 // @Param chain query string true "The signature of the chain"
-// @Param publicKey query string true "publicKey"
+// @Param address query string true "publicKey"
 // @Success 200 {object} GetSigMsgResponse
 // @Router /did/createsigmsg [get]
 func (h *handle) getCreateSigMsg(c *gin.Context) {
-	chain := c.Query("chain")
+	address := c.Query("address")
 
-	publicKey := c.Query("publicKey")
-
-	msg, err := h.did.GetCreateSignatureMassage(chain, publicKey)
+	msg, err := h.did.GetCreateSignatureMassageByAddress(address)
 	if err != nil {
 		h.logger.Error(err)
 		c.JSON(ErrDIDGetSignatureMessage.Code, ErrDIDGetSignatureMessage)
@@ -46,6 +45,7 @@ func (h *handle) getCreateSigMsg(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param sig body string true "user signature"
+// @Param address body string true "user address"
 // @Success 200 {object} CreateDIDResponse
 // @Router /did/create [post]
 // @Failure 502 {object} Error
@@ -60,15 +60,28 @@ func (h *handle) createDID(c *gin.Context) {
 		return
 	}
 
-	// did, err := h.did.RegisterDID(sig)
-	// if err != nil {
-	// 	h.logger.Error(err)
-	// 	c.JSON(ErrDIDCreateFailed.Code, ErrDIDCreateFailed)
-	// 	return
-	// }
-	h.logger.Info(sig)
+	address, ok := body["address"].(string)
+	if !ok {
+		h.logger.Error("address is not string", body)
+		c.JSON(ErrAddressNull.Code, ErrAddressNull)
+		return
+	}
 
-	c.JSON(200, CreateDIDResponse{DID: "did:memo:d687daa192ffa26373395872191e8502cc41fbfbf27dc07d3da3a35de57c2d96"})
+	SigByte, err := hexutil.Decode(sig)
+	if err != nil {
+		h.logger.Error(err)
+		c.JSON(ErrSignature.Code, ErrSignature)
+		return
+	}
+
+	did, err := h.did.RegisterDIDByAddress(address, SigByte)
+	if err != nil {
+		h.logger.Error(err)
+		c.JSON(ErrDIDCreateFailed.Code, ErrDIDCreateFailed)
+		return
+	}
+
+	c.JSON(200, CreateDIDResponse{DID: did})
 }
 
 // @ Summary GetDIDInfo
@@ -76,22 +89,20 @@ func (h *handle) createDID(c *gin.Context) {
 // @Tags DID
 // @Accept json
 // @Produce json
-// @Param did query string true "user did"
+// @Param address query string true "user did"
 // @Success 200 {object} GetDIDInfoResponse
 // @Router /did/info [get]
 // @Failure 503 {object} Error
 func (h *handle) getDIDInfo(c *gin.Context) {
-	did := c.Query("did")
-	if did == "" {
-		c.JSON(ErrDIDNull.Code, ErrDIDNull)
-		return
+	address := c.Query("address")
+
+	didDoc, err := h.did.GetDIDInfo(address)
+	if err != nil {
+		h.logger.Error(err)
+		c.JSON(ErrDIDGetInfo.Code, gin.H{"message": ErrDIDGetInfo.Message, "error": err.Error()})
 	}
 
-	fmt.Println(did)
-	c.JSON(200, GetDIDInfoResponse{DID: did, Info: []DIDInfo{
-		{Chain: "memo", Balance: 100},
-		{Chain: "eth", Balance: 0.01},
-	}})
+	c.JSON(200, didDoc)
 }
 
 // @ Summary GetDeleteSigMsg
